_source/_assets/styles/components/example.css
.c-ex,
.c-ex__container {
  width: 100%;
}

.c-ex:not(:last-of-type) {
  border-bottom: 1px solid color(var(--litegray) a(50%));
}

.c-ex__trigger {
  border-bottom-width: 3px;
  border-bottom-style: solid;
  border-bottom-color: transparent;
  cursor: pointer;
  transition: border-bottom-color 375ms ease-in-out;
}

.c-ex__trigger.active {
  border-bottom-color: var(--blue);
}

.c-ex__content {
  width: 0;
  height: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  display: none;
  visibility: hidden;
  font-size: 100%;
  transition: opacity 375ms ease-in-out;
}

.c-ex__content.active {
  opacity: 1;
  visibility: visible;
  position: static;
  display: block;
  width: 100%;
  height: auto;
}

.c-ex__content.active pre {
  display: block;
  max-height: 25rem;
  overflow-y: scroll;
}

